# air32f103

./: CMakeLists.txt
Script/: air32f103cx.ld
Source/: air32f103cx_startup.s
Source/inc/: air32f103_rcc.h  air32f103_spi.h  air32f103cx.h  fonts.h  st7735.h
Source/src/: air32f103_rcc.c  air32f103_spi.c  fonts.c  main.c  st7735.c
